<resources>
    <string name="app_name">API ECOMMERCE</string>
    <string name="app_welcome">Your favorite Marketplace</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu -->
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Facebook -->
    <string name="facebook_app_id">686168318606891</string>
    <string name="fb_login_protocol_scheme">fb686168318606891</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="car_sal">Cesta de compra</string>
    <string name="menu_product">Productos</string>
    <string name="menu_profile">Perfil</string>

</resources>