<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/menu_home" />
        </menu>
    </item>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_profle"
                android:icon="@drawable/ic_baseline_person_24"
                android:title="@string/menu_gallery" />
        </menu>
    </item>


    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/menu_slideshow" />
        </menu>
    </item>




</menu>